--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
   <title>My Portfolio</title>
 </head>
 <body>
-  My Portfolio (placeholder)
+  <h3>My Portfolio (placeholder)</h3>
 </body>
 </html>
