Parallax scrolling - broken

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>My Portfolio</title>
+
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-  <h3>My Portfolio (placeholder)</h3>
+  <header class="splash-header"></header>
+
+  <div class="placeholder"></div>
+  <p id="scene">Some body</p>
+  <div class="placeholder"></div>
+
+  <script src="../node_modules/jquery/jquery.min.js"></script>
+  <script src="../node_modules/gsap/src/minified/TweenMax.min.js"></script>
+  <script src="../node_modules/scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script>
+
+  <script src="scripts/parallax.js"></script>
 </body>
 </html>
