--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
   <title>My Portfolio</title>
 
+  <link rel="stylesheet" href="styles/test.css">
   <link rel="stylesheet" href="styles/main.css">
   <link href='https://fonts.googleapis.com/css?family=Voltaire' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -52,7 +53,7 @@
               <h3>Interware Dev Company Website</h3>
             </div>
             <div class="crossfade mb-3">
-              <a href="#">
+              <a href="interware-site.html">
                 <img src="images/interware-ss.jpg"/>
                 <img class="base-img hidden-xs" src="images/interware-ss-desat.jpg"/>
               </a>
