Add "work in progress" label

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,9 @@
 </header>
 
 <a id="portfolio"></a>
-<section class="text-center mt-6 mb-6">
+<section class="text-center mt-8 mb-6">
+  <h4 class="section-header mb-5">(This site is currently a work in progress)</h4>
+
   <h1 class="section-header mb-5">Portfolio</h1>
 
   <div class="container">
