Content changes; Script refactoring; Favicon

--- a/public/pages/interware/index.html
+++ b/public/pages/interware/index.html
@@ -6,6 +6,8 @@
 
   <title>My Portfolio</title>
 
+  <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon" />
+
   <link rel="stylesheet" href="../../styles/test.css">
   <link rel="stylesheet" href="../../styles/main.css">
   <link href='https://fonts.googleapis.com/css?family=Voltaire' rel='stylesheet' type='text/css'>
@@ -14,8 +16,9 @@
 <body class="text-center">
 
   <header class="mt-6 mb-8">
-    <h1 class="section-header">Interware Development Company Website</h1>
-    <h4 class="section-header">(Link to live site coming soon)</h4>
+    <h1 class="section-header mb-3">Interware Development Company Website</h1>
+    <h4 class="section-header mb-5">A contract project for a paying client</h4>
+    <h5 class="section-header">(Link to live site coming soon)</h5>
   </header>
 
   <div class="container">
