--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
 
   <title>My Portfolio</title>
 
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+
   <link rel="stylesheet" href="styles/test.css">
   <link rel="stylesheet" href="styles/main.css">
   <link href='https://fonts.googleapis.com/css?family=Voltaire' rel='stylesheet' type='text/css'>
@@ -25,9 +27,9 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a class="cloud-link" onclick="Util.scrollToElemAnimated('#portfolio', 900);">Portfolio</a></li>
-        <li><a class="cloud-link" onclick="Util.scrollToElemAnimated('#aboutme', 1300);">About Me</a></li>
-        <li><a class="cloud-link" onclick="Util.scrollToElemAnimated('#contact', 1400);">Contact</a></li>
+        <li><a class="cloud-link large" onclick="Home.scrollToPortfolio()">Portfolio</a></li>
+        <li><a class="cloud-link large" onclick="Home.scrollToAboutMe()">About Me</a></li>
+        <li><a class="cloud-link large" onclick="Home.scrollToContact()">Contact</a></li>
       </ul>
     </div>
   </div>
@@ -38,17 +40,17 @@
 
   <svg class="cloud-logo-r" xmlns="http://www.w3.org/2000/svg" id="svg3142" viewBox="0 0 170 107.635"><defs id="defs3144"><style id="style4050">@import url(http://fonts.googleapis.com/css?family=Suez+One);</style><style id="style4052">text{font-family:&apos;Suez One&apos;}</style></defs><g id="layer1" transform="translate(-277.857 -158.545)"><g id="g3099" transform="translate(-152.189 -17.586)" fill="#fff"><path id="path3101" d="M445.68 222.66c1.1-25.75 22.68-46.529 48.578-46.529 16.492 0 31.569 8.151 40.609 21.877a35.702 35.702 0 0 1 8.764-1.09c14.444 0 27.595 8.89 33.019 22.216 13.82 4.206 23.396 17.067 23.396 31.602 0 18.213-14.817 33.03-33.03 33.03h-103.94c-18.212.002-33.03-14.817-33.03-33.03 0-11.399 5.966-22.06 15.635-28.076zm17.395 57.41h103.941c16.175 0 29.334-13.157 29.334-29.332 0-13.187-8.874-24.824-21.58-28.296l-.91-.25-.332-.884c-4.656-12.378-16.673-20.694-29.9-20.694-3.08 0-6.13.44-9.062 1.306l-1.353.4-.742-1.199c-8.265-13.334-22.546-21.294-38.215-21.294-24.244 0-44.395 19.71-44.913 43.94l-.022 1.039-.9.519c-9.054 5.243-14.681 14.98-14.681 25.411 0 16.177 13.16 29.334 29.335 29.334z"/><text style="text-align:start;line-height:100%;-inkscape-font-specification:Passion One" x="472.45" y="219.236" id="text3103" font-size="40" font-weight="400" letter-spacing="0" word-spacing="0" font-family="Passion One"><tspan id="tspan3105" x="472.45" y="219.236" style="text-align:start;-inkscape-font-specification:Suez One" font-size="20" font-family="Suez One">Mike </tspan><tspan x="472.45" y="240.341" style="text-align:start;-inkscape-font-specification:Suez One" id="tspan3107" font-size="20" font-family="Suez One">Baldwin</tspan></text><text style="line-height:125%;-inkscape-font-specification:Passion One" x="455.138" y="262.147" id="text3111" font-size="40" font-weight="400" letter-spacing="0" word-spacing="0" font-family="Passion One"><tspan id="tspan3113" x="455.138" y="262.147" style="-inkscape-font-specification:Suez One" font-size="14" font-family="Suez One">Software Engineer</tspan></text></g></g></svg>
 
-  <a class="cloud-link" onclick="Util.scrollToElemAnimated('#portfolio', 900);">
+  <a class="cloud-link" onclick="Home.scrollToPortfolio()">
     <div class="cloud-nav-r cloud1-r floating clouds-disappear-animation">
       <svg xmlns="http://www.w3.org/2000/svg" id="svg3142" viewBox="0 0 65 41.531"><defs id="defs3144"><style>@import url(http://fonts.googleapis.com/css?family=Suez+One);</style><style xmlns="http://www.w3.org/2000/svg">text{font-family:&apos;Suez One&apos;}</style></defs><g id="layer1" transform="translate(-711.057 -699.706)"><g transform="translate(-477.099 -593.263)" id="g3118"><g id="g3123" transform="translate(-199 630)" fill="#fff"><path id="path3125" d="M1393.556 680.985c.414-9.694 8.538-17.517 18.288-17.517 6.21 0 11.885 3.069 15.288 8.236a13.441 13.441 0 0 1 3.3-.41c5.438 0 10.388 3.347 12.43 8.363 5.204 1.584 8.808 6.426 8.808 11.898 0 6.856-5.578 12.434-12.434 12.434h-39.13c-6.857.001-12.436-5.578-12.436-12.434 0-4.292 2.246-8.306 5.886-10.57zm6.55 21.613h39.13c6.09 0 11.043-4.953 11.043-11.043 0-4.964-3.34-9.345-8.124-10.652l-.343-.094-.125-.333c-1.753-4.66-6.277-7.79-11.256-7.79-1.16 0-2.308.165-3.412.49l-.51.151-.279-.451c-3.11-5.02-8.488-8.017-14.386-8.017-9.128 0-16.714 7.42-16.909 16.542l-.01.392-.339.195a11.094 11.094 0 0 0-5.527 9.567c0 6.09 4.955 11.043 11.044 11.043z" stroke="#fff"/><text style="text-align:start;line-height:100%;-inkscape-font-specification:Passion One" x="1399.078" y="691.548" id="text3127" font-size="17.778" font-weight="400" letter-spacing="0" word-spacing="0" font-family="Passion One"><tspan x="1399.078" y="691.548" id="tspan3129" style="text-align:start;-inkscape-font-specification:Suez One" font-size="9.778" font-family="Suez One">Portfolio</tspan></text></g></g></g></svg>
     </div>
   </a>
-  <a class="cloud-link" onclick="Util.scrollToElemAnimated('#aboutme', 1300);">
+  <a class="cloud-link" onclick="Home.scrollToAboutMe()">
     <div class="cloud-nav-r cloud2-r floating clouds-disappear-animation">
       <svg xmlns="http://www.w3.org/2000/svg" id="svg3142" viewBox="0 0 65 41.531"><defs id="defs3144"><style>@import url(http://fonts.googleapis.com/css?family=Suez+One);</style><style xmlns="http://www.w3.org/2000/svg">text{font-family:&apos;Suez One&apos;}</style></defs><g id="layer1" transform="translate(458.58 -1206.195)"><g transform="translate(-1778.611 -54.524)" id="g3108" fill="#fff"><path id="path3133" d="M1326.412 1278.73c.414-9.693 8.538-17.516 18.288-17.516 6.208 0 11.884 3.069 15.288 8.236a13.441 13.441 0 0 1 3.299-.41c5.438 0 10.389 3.347 12.43 8.363 5.204 1.584 8.809 6.426 8.809 11.898 0 6.856-5.578 12.434-12.435 12.434h-39.13c-6.857.001-12.435-5.578-12.435-12.434 0-4.292 2.246-8.306 5.886-10.57zm6.548 21.614h39.131c6.09 0 11.043-4.953 11.043-11.043 0-4.964-3.34-9.345-8.124-10.652l-.342-.094-.126-.333c-1.752-4.66-6.276-7.79-11.256-7.79-1.16 0-2.308.165-3.412.49l-.509.151-.28-.45c-3.11-5.02-8.487-8.018-14.386-8.018-9.127 0-16.713 7.421-16.909 16.542l-.01.392-.338.195a11.094 11.094 0 0 0-5.528 9.567c0 6.09 4.955 11.043 11.044 11.043z" stroke="#fff"/><text style="text-align:start;line-height:100%;-inkscape-font-specification:Suez One" x="1329.647" y="1289.294" id="text3135" font-size="9.778" font-weight="400" letter-spacing="0" word-spacing="0" font-family="Suez One"><tspan x="1329.647" y="1289.294" id="tspan3137" style="text-align:start;-inkscape-font-specification:Suez One">About Me</tspan></text></g></g></svg>
     </div>
   </a>
-  <a class="cloud-link" onclick="Util.scrollToElemAnimated('#contact', 1400);">
+  <a class="cloud-link" onclick="Home.scrollToContact()">
     <div class="cloud-nav-r cloud3-r floating clouds-disappear-animation">
       <svg xmlns="http://www.w3.org/2000/svg" id="svg3142" viewBox="0 0 65 41.531"><defs id="defs3144"><style>@import url(http://fonts.googleapis.com/css?family=Suez+One);</style><style xmlns="http://www.w3.org/2000/svg">text{font-family:&apos;Suez One&apos;}</style></defs><g id="layer1" transform="translate(-83.211 -744.113)"><g transform="translate(-1351.82 -577.606)" id="g3113" fill="#fff"><path d="M1441.412 1339.73c.414-9.693 8.538-17.516 18.288-17.516 6.208 0 11.884 3.069 15.288 8.236a13.441 13.441 0 0 1 3.299-.41c5.438 0 10.389 3.347 12.43 8.363 5.204 1.584 8.809 6.426 8.809 11.898 0 6.856-5.578 12.434-12.435 12.434h-39.13c-6.857.001-12.435-5.578-12.435-12.434 0-4.292 2.246-8.306 5.886-10.57zm6.548 21.614h39.131c6.09 0 11.043-4.953 11.043-11.043 0-4.964-3.34-9.345-8.124-10.652l-.342-.094-.126-.333c-1.752-4.66-6.276-7.79-11.256-7.79-1.16 0-2.308.165-3.412.49l-.509.151-.28-.45c-3.11-5.02-8.487-8.018-14.386-8.018-9.127 0-16.713 7.421-16.909 16.542l-.01.392-.338.195a11.094 11.094 0 0 0-5.528 9.567c0 6.09 4.955 11.043 11.044 11.043z" id="path3117" stroke="#fff"/><text id="text3119" y="1350.294" x="1448.293" style="text-align:start;line-height:100%;-inkscape-font-specification:Suez One" font-size="9.778" font-weight="400" letter-spacing="0" word-spacing="0" font-family="Suez One"><tspan style="text-align:start;-inkscape-font-specification:Suez One" id="tspan3121" y="1350.294" x="1448.293">Contact</tspan></text></g></g></svg>
     </div>
@@ -69,7 +71,7 @@
             <h3>Wedding Site (RSVP & Registry)</h3>
           </div>
           <div class="crossfade mb-3">
-            <a href="http://wedding.mikeindevelopment.com/">
+            <a href="http://wedding.mikeindevelopment.com/" target="_blank">
               <img src="images/wedding-ss.jpg" />
               <img class="base-img hidden-xs" src="images/wedding-ss-desat.jpg" />
             </a>
@@ -82,7 +84,7 @@
             <h3>Interware Dev Company Website</h3>
           </div>
           <div class="crossfade mb-3">
-            <a href="pages/interware">
+            <a href="pages/interware/" target="_blank">
               <img src="images/interware-ss.jpg"/>
               <img class="base-img hidden-xs" src="images/interware-ss-desat.jpg"/>
             </a>
@@ -127,7 +129,10 @@
         <img class="img-circle img-scale-r" src="images/me-circle.jpg" />
       </div>
       <div class="text-left col-xs-8 col-md-7 col-lg-6 col-xs-offset-2 col-sm-offset-1 col-lg-offset-0">
-        <p>I'm a user-focused software engineer with a personal devotion to creating awesome application experiences. I'm looking for opportunities to fully understand the true needs of customers and then design thoughtfully crafted solutions to their problems. I'm a huge believer in the importance of lifelong learning, and I'm always looking for ways to make things better. I care most about causes that help empower individuals, like the personalization of education and healthcare.</p>
+        <h5>A little on my background:</h5>
+        <p class="mb-5">I'm a front-end focused software engineer who loves building applications that people love to use! I think it's super important to take every opportunity to fully understand the needs of the user when designing interfaces, so that the simplest and most natural experiences can be created. I try to take a thoughtful approach to all my projects, continually assessing what are the best technologies, tools, and processes to solve a problem. I'm also a huge believer in the importance of lifelong learning, and I'm always looking for ways to make things better. I care most about causes that help empower individuals, like the personalization of education and healthcare.</p>
+        <h5>Some of my most relevant tech skills:</h5>
+        <p>HTML, CSS, Javascript, AngularJS, MV* patterns, RESTful APIs, Responsive Design, SASS, Git, Agile/Scrum, JIRA, Jenkins, Java, C#</p>
       </div>
     </div>
   </div>
@@ -136,6 +141,14 @@
 <section class="text-center mb-5">
   <a id="contact"></a>
   <h1 class="section-header mb-5">Contact</h1>
+
+  <div class="container">
+    <div class="row text-left">
+      <div class="col-xs-8 col-md-6 col-xs-offset-2 col-md-offset-3">
+        <p class="mb-5">I'm always interested in hearing about cool projects or companies, or just chatting about tech. Feel free to send me a message!</p>
+      </div>
+    </div>
+  </div>
 
   <div class="contact-icons">
     <a class="hover-swap" data-description="LinkedIn" href="https://www.linkedin.com/in/mike-baldwin-24a4989a" target="_blank">
@@ -169,5 +182,7 @@
 <script src="scripts/initialize.js"></script>
 <script src="scripts/utility.js"></script>
 <script src="scripts/parallax.js"></script>
+<script src="scripts/home.js"></script>
+
 </body>
 </html>
