Add resume; Remove navbar collapse on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,6 @@
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top menu-appear-animation" role="navigation">
   <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-              aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><a class="cloud-link large" onclick="Home.scrollToPortfolio()">Portfolio</a></li>
@@ -59,8 +50,6 @@
 
 <a id="portfolio"></a>
 <section class="text-center mt-8 mb-6">
-  <h4 class="section-header mb-5">(This site is currently a work in progress)</h4>
-
   <h1 class="section-header mb-5">Portfolio</h1>
 
   <div class="container">
@@ -71,7 +60,7 @@
             <h3>Wedding Site (RSVP & Registry)</h3>
           </div>
           <div class="crossfade mb-3">
-            <a href="http://wedding.mikeindevelopment.com/" target="_blank">
+            <a href="http://wedding.mikeindevelopment.com/#/registry" target="_blank">
               <img src="images/wedding-ss.jpg" />
               <img class="base-img hidden-xs" src="images/wedding-ss-desat.jpg" />
             </a>
@@ -119,8 +108,8 @@
   </div>
 </section>
 
+<a id="aboutme"></a>
 <section class="text-center section-inverse mb-6 pv-6">
-  <a id="aboutme"></a>
   <h1 class="section-header mb-6">About Me</h1>
 
   <div class="container">
@@ -163,7 +152,7 @@
       <img class="show-baseline" src="images/github-dark.svg"/>
       <img class="show-on-hover" src="images/github-light.svg"/>
     </a>
-    <a class="hover-swap" data-description="Résumé" href="#" target="_blank">
+    <a class="hover-swap" data-description="Résumé" href="content/MBaldwin_Resume.docx" target="_blank">
       <img class="show-baseline" src="images/resume-dark.svg"/>
       <img class="show-on-hover" src="images/resume-light.svg"/>
     </a>
