--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
   </div>
 
   <div class="contact-icons">
-    <a class="hover-swap" data-description="LinkedIn" href="https://www.linkedin.com/in/mike-baldwin-24a4989a" target="_blank">
+    <a class="hover-swap" data-description="LinkedIn" href="https://www.linkedin.com/in/mike-baldwin" target="_blank">
       <img class="show-baseline" src="images/linkedin-dark.svg"/>
       <img class="show-on-hover" src="images/linkedin-light.svg"/>
     </a>
@@ -152,7 +152,7 @@
       <img class="show-baseline" src="images/github-dark.svg"/>
       <img class="show-on-hover" src="images/github-light.svg"/>
     </a>
-    <a class="hover-swap" data-description="Résumé" href="content/MBaldwin_Resume.docx" target="_blank">
+    <a class="hover-swap" data-description="Résumé" onclick="Home.showResumeDialog()" target="_blank">
       <img class="show-baseline" src="images/resume-dark.svg"/>
       <img class="show-on-hover" src="images/resume-light.svg"/>
     </a>
@@ -163,10 +163,12 @@
 </section>
 
 <script src="../node_modules/jquery/jquery.min.js"></script>
+<script src="../node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
 <script src="../node_modules/gsap/src/minified/TweenMax.min.js"></script>
 <script src="../node_modules/scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script>
 <script src="../node_modules/scrollmagic/scrollmagic/minified/plugins/animation.gsap.min.js"></script>
 <script src="../node_modules/scrollmagic/scrollmagic/minified/plugins/debug.addIndicators.min.js"></script>
+<script src="../node_modules/bootbox/bootbox.min.js"></script>
 
 <script src="scripts/initialize.js"></script>
 <script src="scripts/utility.js"></script>
