Content updates & fixes

--- a/public/pages/interware/index.html
+++ b/public/pages/interware/index.html
@@ -18,7 +18,8 @@
   <header class="mt-6 mb-8">
     <h1 class="section-header mb-3">Interware Development Company Website</h1>
     <h4 class="section-header mb-5">A contract project for a paying client</h4>
-    <h5 class="section-header">(Link to live site coming soon)</h5>
+    <h5 class="section-header">Live site:</h5>
+    <h4 class="section-header"><a href="http://www.interwaredev.com/" target="_blank">www.interwaredev.com</a></h4>
   </header>
 
   <div class="container">
@@ -84,7 +85,7 @@
       <h3 class="section-header mb-3">Summary</h3>
       <div class="row text-left mb-5">
         <div class="col-xs-10 col-sm-8 col-xs-offset-1 col-sm-offset-2">
-          <ul class="features">
+          <ul>
             <li><p>Consistent navigation with fixed header and sticky footer</p></li>
             <li><p>Responsive layouts using the Bootstrap framework</p></li>
             <li><p>Various content pages with custom layouts</p></li>
